--- a/index.html
+++ b/index.html
@@ -107,21 +107,21 @@
 
 <body>
 <ul>
-	<li><a class="navbarlogo" href="#"><img src="H:\Tech Inno\Webpages\images\AllNote_Logo_BG.png" width="110" alt="AllNote Logo"></a></li>
-	<li><a class="navbuttons" href="H:\Tech Inno\Webpages\AllNote Instruments.html">Instruments</a></li>
-	<li><a class="navbuttons" href="H:\Tech Inno\Webpages\AllNote About.html">About</a></li>
-	<li><img class="navbarswirl" src="H:\Tech Inno\Webpages\images\AllNote_Swirl.png" height="61px"></li>
+	<li><a class="navbarlogo" href="#"><img src="AllNote_Logo_BG.png" width="110" alt="AllNote Logo"></a></li>
+	<li><a class="navbuttons" href="AllNote Instruments.html">Instruments</a></li>
+	<li><a class="navbuttons" href="AllNote About.html">About</a></li>
+	<li><img class="navbarswirl" src="AllNote_Swirl.png" height="61px"></li>
 </ul>
 <br>
-<img class="mainlogo" src="H:\Tech Inno\Webpages\images\AllNote_Logo.png" alt="AllNote Logo">
-<!-- <img class="sideswirl" src="H:\Tech Inno\Webpages\images\AllNote_Swirl_Side.png" style="max-width:20%"> -->
+<img class="mainlogo" src="AllNote_Logo.png" alt="AllNote Logo">
+<!-- <img class="sideswirl" src="AllNote_Swirl_Side.png" style="max-width:20%"> -->
 <h2>All the fingerings for all woodwind instruments*</h2>
 <br>
-<a class="button" href="H:\Tech Inno\Webpages\AllNote Instruments.html">Try it out!</a>
+<a class="button" href="AllNote Instruments.html">Try it out!</a>
 <br>
 <br>
 <br>
-<img src="H:\Tech Inno\Webpages\images\AllNote_Swirl_Large.png" style="max-width:100%">
+<img src="AllNote_Swirl_Large.png" style="max-width:100%">
 <p class="homebottom">*Bass Clarinet is the only instrument included at launch</p>
 </body>
 
