Changed img on instr. page

--- a/AllNote Instruments.html
+++ b/AllNote Instruments.html
@@ -116,29 +116,29 @@
 
 <body>
 <ul>
-	<li><a class="navbarlogo" href="H:\Tech Inno\Webpages\AllNote Homepage.html"><img src="H:\Tech Inno\Webpages\images\AllNote_Logo_BG.png" width="110" alt="AllNote Logo"></a></li>
-	<li><a class="navbuttons" id="currentnav" href="H:\Tech Inno\Webpages\AllNote Instruments.html">Instruments</a></li>
-	<li><a class="navbuttons" href="H:\Tech Inno\Webpages\AllNote About.html">About</a></li>
-	<li><img class="navbarswirl" src="H:\Tech Inno\Webpages\images\AllNote_Swirl.png" height="61px"></li>
+	<li><a class="navbarlogo" href="AllNote Homepage.html"><img src="AllNote_Logo_BG.png" width="110" alt="AllNote Logo"></a></li>
+	<li><a class="navbuttons" id="currentnav" href="AllNote Instruments.html">Instruments</a></li>
+	<li><a class="navbuttons" href="AllNote About.html">About</a></li>
+	<li><img class="navbarswirl" src="AllNote_Swirl.png" height="61px"></li>
 </ul>
 <br>
-<div class="center"><img class="mainlogo" src="H:\Tech Inno\Webpages\images\AllNote_Logo.png" alt="AllNote Logo"></div>
+<div class="center"><img class="mainlogo" src="AllNote_Logo.png" alt="AllNote Logo"></div>
 <h2>Choose an Instrument:</h2>
 <br>
 
 <div class="firstrow">
-<a href="H:\Tech Inno\Webpages\AllNote Bass.html" class="select done margin"><img src="H:\Tech Inno\Webpages\images\BassClarinetSelect.png" style="width: 100px"></a>
-<a href="#" class="notdone"><img src="H:\Tech Inno\Webpages\images\ClarinetSelect.png" style="width:100px"></a>
+<a href="AllNote Bass.html" class="select done margin"><img src="BassClarinetSelect.png" style="width: 100px"></a>
+<a href="#" class="notdone"><img src="ClarinetSelect.png" style="width:100px"></a>
 </div>
 
 <div class="secondrow">
-<a href="#" class="notdone margin"><img src="H:\Tech Inno\Webpages\images\BassoonSelect.png" style="width:100px"></a>
-<a href="#" class="notdone"><img src="H:\Tech Inno\Webpages\images\OboeSelect.png" style="width:100px"></a>
+<a href="#" class="notdone margin"><img src="BassoonSelect.png" style="width:100px"></a>
+<a href="#" class="notdone"><img src="OboeSelect.png" style="width:100px"></a>
 </div>
 
 <div class="thirdrow">
-<a href="#" class="notdone margin"><img src="H:\Tech Inno\Webpages\images\SaxSelect.png" style="width:100px"></a>
-<a href="#" class="notdone"><img src="H:\Tech Inno\Webpages\images\FluteSelect.png" style="width:100px"></a>
+<a href="#" class="notdone margin"><img src="SaxSelect.png" style="width:100px"></a>
+<a href="#" class="notdone"><img src="FluteSelect.png" style="width:100px"></a>
 </div>
 
 </body>
