--- a/AllNote About.html
+++ b/AllNote About.html
@@ -79,13 +79,13 @@
 
 <body>
 <ul>
-	<li><a class="navbarlogo" href="H:\Tech Inno\Webpages\AllNote Homepage.html"><img src="H:\Tech Inno\Webpages\images\AllNote_Logo_BG.png" width="110" alt="AllNote Logo"></a></li>
-	<li><a class="navbuttons" href="H:\Tech Inno\Webpages\AllNote Instruments.html">Instruments</a></li>
+	<li><a class="navbarlogo" href="index.html"><img src="AllNote_Logo_BG.png" width="110" alt="AllNote Logo"></a></li>
+	<li><a class="navbuttons" href="AllNote Instruments.html">Instruments</a></li>
 	<li><a class="navbuttons" id="currentnav" href="#">About</a></li>
-	<li><img class="navbarswirl" src="H:\Tech Inno\Webpages\images\AllNote_Swirl.png" height="61px"></li>
+	<li><img class="navbarswirl" src="AllNote_Swirl.png" height="61px"></li>
 </ul>
 <br>
-<div class="center"><img class="mainlogo" src="H:\Tech Inno\Webpages\images\AllNote_Logo.png" alt="AllNote Logo"><div>
+<div class="center"><img class="mainlogo" src="AllNote_Logo.png" alt="AllNote Logo"><div>
 <h2>About AllNote</h2>
 <p>AllNote is a website that provides fingerings for different instruments, with Bass Clarinet being the first one so far. The concept was created in early November 2021, and development began in early March 2022. Originally meant to be an app, this project turned into a website when the developer ran into way too many problems.</p>
 <br>
