--- a/AllNote Instruments.html
+++ b/AllNote Instruments.html
@@ -116,7 +116,7 @@
 
 <body>
 <ul>
-	<li><a class="navbarlogo" href="AllNote Homepage.html"><img src="AllNote_Logo_BG.png" width="110" alt="AllNote Logo"></a></li>
+	<li><a class="navbarlogo" href="index.html"><img src="AllNote_Logo_BG.png" width="110" alt="AllNote Logo"></a></li>
 	<li><a class="navbuttons" id="currentnav" href="AllNote Instruments.html">Instruments</a></li>
 	<li><a class="navbuttons" href="AllNote About.html">About</a></li>
 	<li><img class="navbarswirl" src="AllNote_Swirl.png" height="61px"></li>
