--- a/index.html
+++ b/index.html
@@ -102,14 +102,20 @@
 		margin-top: 5%;
 		width: 200px;
 	}		
+	.icon {
+		padding: 10.5px 10px 10px 10px;
+	}
+	.about {
+		padding: 15.5px 15px 15px 15px;
+	}
 </style>
 </head>
 
 <body>
 <ul>
 	<li><a class="navbarlogo" href="#"><img src="AllNote_Logo_BG.png" width="110" alt="AllNote Logo"></a></li>
-	<li><a class="navbuttons" href="AllNote Instruments.html">Instruments</a></li>
-	<li><a class="navbuttons" href="AllNote About.html">About</a></li>
+	<li><a class="navbuttons icon" href="H:\Tech Inno\Webpages\AllNote Instruments.html"><img src="H:\Tech Inno\Webpages\images\InstrumentIcon.png" height="41px"></a></li>
+	<li><a class="navbuttons about" href="#"><img src="H:\Tech Inno\Webpages\images\AboutIcon.png" height="31px"></a></li>
 	<li><img class="navbarswirl" src="AllNote_Swirl.png" height="61px"></li>
 </ul>
 <br>
