--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <ul>
 	<li><a class="navbarlogo" href="#"><img src="AllNote_Logo_BG.png" width="110" alt="AllNote Logo"></a></li>
 	<li><a class="navbuttons icon" href="AllNote Instruments.html"><img src="InstrumentIcon.png" height="41px"></a></li>
-	<li><a class="navbuttons about" href="#"><img src="AboutIcon.png" height="31px"></a></li>
+	<li><a class="navbuttons about" href="AllNote About.html"><img src="AboutIcon.png" height="31px"></a></li>
 	<li><img class="navbarswirl" src="AllNote_Swirl.png" height="61px"></li>
 </ul>
 <br>
