--- a/AllNote Bass.html
+++ b/AllNote Bass.html
@@ -249,14 +249,20 @@
 		left: 45px;
 		margin-bottom: -25px;
 	}
+	.icon {
+		padding: 10.5px 10px 10.5px 10px;
+	}
+	.about {
+		padding: 15.5px 15px 15.5px 15px;
+	}
 </style>
 </head>
 
 <body>
 <ul>
 	<li><a class="navbarlogo" href="index.html"><img src="AllNote_Logo_BG.png" width="110" alt="AllNote Logo"></a></li>
-	<li><a class="navbuttons" href="AllNote Instruments.html">Instruments</a></li>
-	<li><a class="navbuttons" href="AllNote About.html">About</a></li>
+	<li><a class="navbuttons icon" href="AllNote Instruments.html"><img src="InstrumentIcon.png" height="41px"></a></li>
+	<li><a class="navbuttons about" href="AllNote About.html"><img src="AboutIcon.png" height="31px"></a></li>
 	<li><img class="navbarswirl" src="AllNote_Swirl.png" height="61px"></li>
 </ul>
 <br>
