--- a/AllNote About.html
+++ b/AllNote About.html
@@ -74,14 +74,20 @@
 	a {
 		color: #ef3c64;
 	}
+	.icon {
+		padding: 10.5px 10px 10.5px 10px;
+	}
+	.about {
+		padding: 15.5px 15px 15.5px 15px;
+	}
 </style>
 </head>
 
 <body>
 <ul>
 	<li><a class="navbarlogo" href="index.html"><img src="AllNote_Logo_BG.png" width="110" alt="AllNote Logo"></a></li>
-	<li><a class="navbuttons" href="AllNote Instruments.html">Instruments</a></li>
-	<li><a class="navbuttons" id="currentnav" href="#">About</a></li>
+	<li><a class="navbuttons icon" href="AllNote Instruments.html"><img src="InstrumentIcon.png" height="41px"></a></li>
+	<li><a class="navbuttons about" id="currentnav" href="#"><img src="AboutIcon.png" height="31px"></a></li>
 	<li><img class="navbarswirl" src="AllNote_Swirl.png" height="61px"></li>
 </ul>
 <br>
