tried to fix insta link

--- a/AllNote About.html
+++ b/AllNote About.html
@@ -95,7 +95,7 @@
 <h2>About AllNote</h2>
 <p>AllNote is a website that provides fingerings for different instruments, with Bass Clarinet being the first one so far. The concept was created in early November 2021, and development began in early March 2022. Originally meant to be an app, this project turned into a website when the developer ran into way too many problems.</p>
 <br>
-<p>Elliott Riggs, the developer, loves all things design-related. He has tried graphic design, animation, 3d-modeling, game design and web design (with this being his first website). Follow <a href="instagram.com/rigg3d_design">@Rigg3d_Design</a> on Instagram for updates on AllNote and cool design posts. Feel free to send a dm with feedback about the site.</p>
+<p>Elliott Riggs, the developer, loves all things design-related. He has tried graphic design, animation, 3d-modeling, game design and web design (with this being his first website). Follow <a href="https://www.instagram.com/rigg3d_design">@Rigg3d_Design</a> on Instagram for updates on AllNote and cool design posts. Feel free to send a dm with feedback about the site.</p>
 
 
 </body>
